removed old scripts

--- a/public/index.html
+++ b/public/index.html
@@ -20,30 +20,7 @@
     <script src="bower_components/aos/dist/aos.js"></script>
 
     <link rel="shortcut icon" href="/src/img/logo.png" />
-
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4739438726936460"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-P0YK43JRZ9"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', 'G-P0YK43JRZ9');
-      gtag('config', 'UA-161620211-1');
-    </script>
-
-    <title>Number One Meals</title>
+    <title>Number One Places</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
