--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,21 @@
     <script src="bower_components/aos/dist/aos.js"></script>
 
     <link rel="shortcut icon" href="/src/img/logo.png" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-5J5SDK7T2N"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-5J5SDK7T2N');
+    </script>
+
     <title>Number One Places</title>
   </head>
   <body>
