added initial content on home page

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <script src="bower_components/aos/dist/aos.js"></script>
 
     <link rel="shortcut icon" href="/src/img/logo.png" />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-5J5SDK7T2N"
